# olhocao

./: .gitignore  manage.py  package-lock.json  package.json  pyproject.toml  styles.css
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: logged_out.html  login.html  signup.html  (+8 more)
assets/css/: styles.css
backoffice/: forms.py  models.py  translation.py  urls.py  views.py
backoffice/fixtures/: policy.json
backoffice/migrations/: 0001_initial.py  0002_alter_legaldocument_options_and_more.py  0002_remove_legaldocument_title_and_more.py  0003_alter_legaldocument_doc_type.py
frontoffice/: admin.py  forms.py  models.py  translation.py  urls.py  views.py
frontoffice/migrations/: 0001_initial.py  0002_contactsubject_name_en_gb_contactsubject_name_pt_pt.py
frontoffice/templatetags/: custom_filters.py
hotel/: forms.py  managers.py  models.py  urls.py  views.py
hotel/migrations/: 0001_initial.py  0002_initial.py  0003_booking_toconline_sale_document_id_and_more.py
hotel/templatetags/: hotel_tags.py
olhocao/: asgi.py  deepl.py  managers.py  settings.py  toconline.py  urls.py  wsgi.py
olhocao/templates/: base.html
pets/: admin.py  forms.py  models.py  translation.py  urls.py  views.py
pets/migrations/: 0001_initial.py  0002_alter_pet_height_cm_alter_pet_weight_kg.py
static/: staticfiles.json
static/css/: styles.3c250d37d19d.css  styles.44bb3048a7ef.css  styles.64bb4276b887.css  styles.82edf6fcf5e5.css  styles.css
static/django-browser-reload/: reload-listener.js  reload-worker.js
(+179 files in other folders)
